# hearthstone-ai

./: .gitIgnore  .gitattributes  .gitmodules  Makefile  Makefile.inc  README.md  REPORT.md
agents/tensorflow/: train.py
agents/test/: CardDispatcher.cpp  MCTS.sln  MCTS.vcxproj  MCTS.vcxproj.filters  TestStateBuilder.cpp  TestStateBuilder.h  alphazero_e2e_test.cpp  e2e_test.cpp
alphazero/include/: runner.h  trainer.h
alphazero/test/: e2e_test.cpp
clang/: Makefile
data/case1/: Power.log.1  README.txt
data/case2/: README.txt
data/case3/: task_1.json  task_10.json  task_11.json  task_12.json  task_13.json  task_14.json  task_15.json  task_16.json  task_17.json  task_18.json  task_19.json  task_2.json  task_20.json  task_21.json  task_22.json  task_23.json  task_24.json  task_25.json  task_26.json  task_27.json  task_28.json  task_29.json  task_3.json  task_30.json  task_31.json  task_32.json  (+17 more)
engine/: README.md
engine/test/: CMakeLists.txt  CMakeSettings.json  e2e_card_dispatcher.cpp  e2e_main.cpp  e2e_test1.cpp  e2e_test2.cpp  e2e_test3.cpp  flow_controller.sln  flow_controller.vcxproj  flow_controller.vcxproj.filters
game-ai/: Makefile
gcc-7/: Makefile
include/: NeuralNetwork.h  board-node-map-impl.h  board-node-map.h  decider.h  mcts.h  task.h  tree.h
judge/: README.md
lib/: board.h  card.h  game.h  opponent.h  player.h
pilot_run/: Makefile
simulation/: Makefile  Makefile.inc  README
src/: GenerateTrainData.cpp  NeuralNetwork.cpp
tensorflow/: data_reader.py  model.py  train.py
vs_projects/: event-manager.vcxproj.filters  vs_projects.sln
(+1652 files in other folders)
